# aiornot-python

./: .gitignore  LICENSE  Makefile  README.md  dev.md  example.py  pyproject.toml
.github/workflows/: test.yaml
aiornot/: __init__.py  async_client.py  base_client.py  cli.py  common_client.py  mcp_server.py  operations.py  req_builders.py  resp_types.py  settings.py  sync_client.py  validation.py
aiornot/types/: __init__.py  batch.py  common.py  enums.py  image.py  text.py  voice.py
scripts/: gen-test-data.sh  test_cli.sh
src/aiornot/: async_client.py  cli.py  exceptions.py  sync_client.py
src/aiornot/types/: batch.py  music.py  video.py
tests/: conftest.py  test_async_client.py  test_cli.py  test_clients.py  test_exceptions.py  test_integration.py  test_mcp_server.py  test_operations.py  test_req_builders.py  test_resp_types.py  test_retries.py  test_sync_client.py
tests/fixtures/: image_response.json  music_response.json  text_response.json  video_response.json  voice_response.json
